--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p>Para insertar una imagen en nuestra página, usamos la etiqueta <strong><img></strong>, que tiene dos atributos: <strong>src</strong>, que indica la dirección de la imagen, y <strong>alt</strong>, que indica el texto alternativo que se muestra si la imagen no se carga.</p>
     <img src="https://th.bing.com/th/id/R.0561c9b0391f91d1f4727aa442acd559?rik=5ApMJTcX%2flhfEQ&riu=http%3a%2f%2fk32.kn3.net%2ftaringa%2f0%2f3%2fA%2f5%2f9%2f6%2fnekochii987%2f7E5.jpg&ehk=9qWVk7r8cE%2bQ%2f0OUFID%2bzMlHiYENXx42uBgYjS%2bFd0E%3d&risl=&pid=ImgRaw&r=0" alt="Una imagen de un gato">
     <p>Por último, para crear un enlace a otra página web, usamos la etiqueta <strong><a></strong>, que tiene el atributo <strong>href</strong>, que indica la dirección a la que queremos ir. El texto que va entre las etiquetas de apertura y cierre es el que se muestra como enlace.</p>
-    <a href="^2^">Este es un enlace a Wikipedia</a>
+    <a href="^2^">Este es un enlace a WAWikipedia</a>
 </body>
 </html>
 
